--- a/index.html
+++ b/index.html
@@ -56,14 +56,21 @@
 
             <!-- Main Content Area where views are rendered -->
             <main id="app-container" class="p-6 md:p-8">
-                <!-- App views will be injected here by the script -->
+                <!-- Initial loading state to prevent flash of empty content -->
+                <div class="view active flex flex-col items-center justify-center p-12 text-center">
+                     <svg class="animate-spin h-10 w-10 text-blue-600" fill="none" viewBox="0 0 24 24">
+                        <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle>
+                        <path class="opacity-75" fill="currentColor" d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"></path>
+                    </svg>
+                    <p class="mt-4 text-slate-600 font-semibold">Loading...</p>
+                </div>
             </main>
         </div>
     </div>
     
     <!-- TEMPLATES for different views -->
     <template id="identification-view">
-        <div class="text-center view active">
+        <div class="text-center view">
             <h2 class="text-2xl font-bold text-slate-800 mb-2" data-translate="welcomeTitle">Begin Your Enrollment</h2>
             <p class="text-slate-600 mb-8" data-translate="welcomeMessage">Enter your name or ID to start the process.</p>
             <div class="max-w-md mx-auto">
@@ -335,6 +342,7 @@
         async resumeSession(sessionId) {
             this.renderView('loading', { messageKey: 'resumingSession' });
             try {
+                console.debug(`Attempting to resume session with ID: ${sessionId}`);
                 const response = await fetch(`${this.config.resumeUrl}?sessionId=${sessionId}`);
                 if (!response.ok) throw new Error('Failed to fetch session data.');
 
@@ -345,7 +353,7 @@
                     const sectionNumber = parseInt(section, 10);
                     const startTime = this.videos[sectionNumber]?.startTime || 0;
 
-                    const resumedState = {
+                    this.state = {
                         sessionId: sessionId,
                         userIdentifier: data.userIdentifier,
                         currentSection: sectionNumber,
@@ -353,19 +361,12 @@
                         status: 'resumed',
                         view: 'video'
                     };
-                    this.state = resumedState;
                     this.saveState();
                     
                     this.renderView('video', { 
                         section: this.state.currentSection,
                         startTime: startTime
                     });
-
-                    // Force the player to reload this section’s video
-                    console.debug('Resuming section', section, 'startTime', startTime);
-                    const video = this.videos[this.state.currentSection];
-                    console.debug('Loading video ID', video.videoId, 'at startTime', startTime);
-                    this.loadYouTubePlayer(video.videoId, startTime);
 
                 } else {
                     throw new Error(data.error || 'Invalid session data received.');
